--- a/AssetTracking/Views/Home/Index.cshtml
+++ b/AssetTracking/Views/Home/Index.cshtml
@@ -9,7 +9,7 @@
                     <div class="rotate">
                         <i class="fa fa-user fa-5x"></i>
                     </div>
-                    <h6 class="text-uppercase">Total Assets</h6>
+                    <h6 class="text-uppercase">NTMS Total Assets</h6>
                     <h1 class="display-3">
                         @Model.Count
                     </h1>
