--- a/AssetTracking/Views/Home/Index.cshtml
+++ b/AssetTracking/Views/Home/Index.cshtml
@@ -20,7 +20,7 @@
                     <div class="rotate">
                         <i class="fa fa-credit-card-alt fa-5x"></i>
                     </div>
-                    <h6 class="text-uppercase">Average Cost</h6>
+                    <h6 class="text-uppercase">NTMS: Average Cost</h6>
                     <h1 class="display-3">
                         @Model.AverageCost.ToString("C")
                     </h1>
